# TestTask

./: .gitignore  CMakeLists.txt  README.md  TestTask.pro  desc.txt  requirements.txt  tz.txt
data/: Activity.csv  ElementData.csv  element.csv  final_data.csv  processed_data.csv  tank.csv
forms/: mainwindow.ui
include/: fileprocessor.h  mainwindow.h
src/: analyze_results.py  config.py  data_processor.py  db_executor.py  feature_selector.py  fileprocessor.cpp  hyperparameter_tuner.py  json_normalizer.py  main.py  mainwindow.cpp  model_trainer.py  myPlot.py
src/sql/: process_data.sql
tests/: test_data_processor.py  test_feature_selector.py  test_hyperparameter_tuner.py  test_model_trainer.py  testfileprocessor.cpp
